# student-loan-calculator

./: .dockerignore  .env.example  .gitignore  .vercelignore  Dockerfile  README.md  cloudbuild.yaml  docker-compose.yml  index.html  next.config.ts  package-lock.json  package.json  pyproject.toml  requirements.txt  tsconfig.json  vercel.json
.vercel/: project.json
public/data/: student_loan_lifetime_analysis.csv  student_loan_marginal_rates.csv  student_loan_parameters.csv
src/: App.css  App.jsx  index.css
src/app/: globals.css  layout.tsx  page.tsx
src/components/: PolicyEngineHeader.tsx  StudentLoanCalculator.css  StudentLoanCalculator.jsx
src/uk_budget_data/: api.py  modal_app.py  student_loan_effective_ni.py
