[project]
name = "student-loan-as-effective-ni"
version = "0.1.0"
description = "Student loan as effective NI: marginal deduction rates by age cohort"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "policyengine-uk>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
